[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/dialog/dialog.gd" type="Script" id=1]
[ext_resource path="res://assets/dialog_box/dialog_box_personagem.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/PixeloidSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/dialog_box/setinha.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 9
extra_spacing_bottom = 1
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 440, 64 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "setinha"
length = 0.25
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 440, 64 ), Vector2( 447, 64 ), Vector2( 455, 64 ) ]
}

[node name="dialog_box" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="dialog" type="NinePatchRect" parent="."]
margin_left = 8.0
margin_top = 200.0
margin_right = 472.0
margin_bottom = 280.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 440, 80 )
__meta__ = {
"_edit_group_": true
}

[node name="text" type="RichTextLabel" parent="dialog"]
margin_left = 16.0
margin_top = 16.0
margin_right = 448.0
margin_bottom = 64.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "teste teste teste
AGORA EM CAIXA ALTA
COM ACENTO ãê"

[node name="timer" type="Timer" parent="dialog"]
wait_time = 0.05

[node name="timer_2" type="Timer" parent="dialog"]
wait_time = 0.16
one_shot = true

[node name="setinha" type="Node2D" parent="dialog"]
position = Vector2( 440, 64 )

[node name="sprite" type="Sprite" parent="dialog/setinha"]
texture = ExtResource( 4 )

[node name="animation_player" type="AnimationPlayer" parent="dialog/setinha"]
anims/RESET = SubResource( 2 )
anims/setinha = SubResource( 3 )

[connection signal="timeout" from="dialog/timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="dialog/timer_2" to="." method="_on_timer_2_timeout"]
